--- a/assets/css/exportation.css
+++ b/assets/css/exportation.css
@@ -1,3 +1,6 @@
 .btn-edit {
     margin-right: 10px;
 }
+#form-save-exportation select, #form-save-exportation input[type=number] {
+    width: 225px;
+}
