--- a/assets/css/achatccorp.css
+++ b/assets/css/achatccorp.css
@@ -1,3 +1,6 @@
 .btn-edit {
     margin-right: 10px;
 }
+#form-save-achatccorp select, #form-save-achatccorp input[type=number] {
+    width: 225px;
+}
