--- a/assets/css/achatcol1orp.css
+++ b/assets/css/achatcol1orp.css
@@ -1,3 +1,6 @@
 .btn-edit {
     margin-right: 10px;
 }
+#form-save-achatcol1orp select, #form-save-achatcol1orp input[type=number] {
+    width: 225px;
+}
