--- a/assets/css/achatcol2col1.css
+++ b/assets/css/achatcol2col1.css
@@ -1,3 +1,6 @@
 .btn-edit {
     margin-right: 10px;
 }
+#form-save-achatcol2col1 select, #form-save-achatcol2col1 input[type=number] {
+    width: 225px;
+}
