--- a/assets/css/achatorpailleur.css
+++ b/assets/css/achatorpailleur.css
@@ -1,3 +1,6 @@
 .btn-edit {
     margin-right: 10px;
 }
+#form-save-achatorpailleur select, #form-save-achatorpailleur input[type=number] {
+    width: 225px;
+}
